# rs-update-iconfont

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
