[package]
name = "update-iconfont"
version = "0.1.0"
authors = ["cg-man <cg-man@outlook.com>"]
homepage = "https://github.com/CG-man/rs-update-iconfont"
repository = "https://github.com/CG-man/rs-update-iconfont"
description = "update iconfont"
keywords = ["iconfont", "icon"]
edition = "2018"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyget = { version = "1.0", features = ["https"] }
futures = "0.3"
error-chain = { version = "0.12.4", features = ["backtrace"] }
json = "0.12.4"
zip = { version = "0.5", features = ["deflate"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
panic = "abort"
